# iut-techathon

./: .gitignore  README.md
.claude/: settings.json
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/: __init__.py  alerts.py  clock.py  config.py  constants.py  db.py  discord.py  errors.py  llm.py  main.py  power.py  schemas.py  simulator.py  snapshot.py  ws.py
backend/app/routers/: alerts.py  chat.py  demo.py  devices.py  summary.py
backend/iut_techathon_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: TEAM_PLAN.md  api-contract.md  architecture.md  backend-todo.md  demo-script.md  todo.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/dashboard/: AlertsPanel.tsx  ConnectionBanner.tsx  DashboardPage.tsx  DemoControls.tsx  DeviceIndicator.tsx  EmptyState.tsx  Header.tsx  OfficeLayout.tsx  PowerConsumption.tsx  PowerTrend.tsx  RoomDevicePanel.tsx  SummaryCards.tsx
frontend/src/hooks/: useDashboardFallback.ts  useDashboardSocket.ts  useHistory.ts
frontend/src/lib/: api.ts  format.ts  room.ts
frontend/src/types/: dashboard.ts
hardware/: README.md
hardware/wokwi/: diagram.json  sketch.ino
