[project]
name = "iut-techathon-backend"
version = "0.1.0"
description = "FastAPI backend for the Lights, Fans, Discord office monitoring system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
